<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/top_padding"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:id="@+id/quickplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#FFE0B2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textcurrent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/current_song"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="#FF9800"
            android:text="@string/play_button"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/small_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/quickplay"
        android:layout_marginBottom="@dimen/medium_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Titles"
            android:text="@string/mainmenu_title" />

        <TextView
            android:id="@+id/text_main_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Dexcriptions"
            android:text="@string/mainmenu_description" />

        <Button
            android:id="@+id/playingnow"
            style="@style/MenuButtons"
            android:background="#FFD180"
            android:text="@string/play_now" />

        <Button
            android:id="@+id/library"
            style="@style/MenuButtons"
            android:background="#FFAB40"
            android:text="@string/library" />

        <Button
            android:id="@+id/playlists"
            style="@style/MenuButtons"
            android:background="#FF9100"
            android:text="@string/playlists" />

        <Button
            android:id="@+id/carmode"
            style="@style/MenuButtons"
            android:background="#FF6D00"
            android:text="@string/car_mode" />

    </LinearLayout>


</RelativeLayout>
