<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/medium_margin"
    android:paddingLeft="@dimen/large_margin"
    android:paddingRight="@dimen/large_margin"
    android:paddingTop="@dimen/medium_margin"
    tools:context="com.example.android.musicalstructure.PlayingNowActivity">

    <TextView
        android:id="@+id/textTitle"
        style="@style/Titles"
        android:text="@string/playingnow_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textTitle"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_description"
            style="@style/Dexcriptions"
            android:textSize="@dimen/xsmall_text"
            android:layout_weight="1"
            android:text="@string/playingnow_description" />

        <ImageView
            android:id="@+id/image_artwork"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/artwork"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/song_title"
            android:textSize="@dimen/medium_text" />

        <Button
            android:id="@+id/button_loadPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/playlist_button" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:progress="65" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_play"
                style="@style/PlayingButtons"
                android:background="@color/colorPlay"
                android:text="@string/play_button" />

            <Button
                android:id="@+id/button_stop"
                style="@style/PlayingButtons"
                android:background="@color/colorStop"
                android:text="@string/stop_button" />

            <Button
                android:id="@+id/button_previous"
                style="@style/PlayingButtons"
                android:background="@color/colorPrev"
                android:text="@string/previous_button" />

            <Button
                android:id="@+id/button_next"
                style="@style/PlayingButtons"
                android:background="@color/colorNext"
                android:text="@string/next_button" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
