<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/medium_margin"
    tools:context="com.example.android.musicalstructure.PlaylistActivity">

    <TextView
        android:id="@+id/text_playlistTitle"
        style="@style/Titles"
        android:text="@string/playlists_title" />

    <TextView
        android:id="@+id/textView"
        style="@style/Dexcriptions"
        android:layout_below="@id/text_playlistTitle"
        android:text="@string/playlists_description" />

    <ListView
        android:id="@+id/ListView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/quickplay"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin" />

    <LinearLayout
        android:id="@+id/quickplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#FFE0B2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textcurrent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/current_song"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="#FF9800"
            android:text="@string/play_button"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/small_text" />

    </LinearLayout>


</RelativeLayout>
